--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
- padding: 0;
- margin: 0;
+    font-family: "Noto sans", sans-serif;
+    padding: 0;
+    margin: 0;
 }
